# iiif-fsspec

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  publish.yml
examples/: README.md  browse_download_cli.py  browse_manifest.py  common.py  download_canvas.py  read_first_canvas.py
src/iiif_fsspec/: __init__.py  client.py  exceptions.py  filesystem.py  iiif_file.py  manifest.py  path.py  types.py
tests/: conftest.py  test_client.py  test_client_ranges.py  test_filesystem.py  test_filesystem_branches.py  test_filesystem_https_style.py  test_iiif_file.py  test_integration_live.py  test_manifest.py  test_manifest_branches.py  test_path.py
tests/data/: collection_v2.json  manifest_v2.json  manifest_v3.json
